[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anquanssl"
version = "0.0.1"
authors = [
  { name="jellnicy jin", email="<11457034+jellnicy@users.noreply.github.com>" },
]
description = "Python SDK for AnquanSSL"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/anquanssl/python-sdk"
Issues = "https://github.com/anquanssl/python-sdk/issues"